# market-making-engine

./: DEV_SPEC.md  IMPLEMENTATION_SPEC.md  README.md  REPLIT_DASHBOARD_PROMPT.md  RESEARCH_SPEC.md  pyproject.toml
reports/: backtest_summary.md  backtest_timeseries.csv  fills.csv  fit.csv  mid.csv  mle_report.md  sample_intensity_data.csv
src/market_making_engine/: __init__.py  avellaneda_stoikov.py  backtest.py  cli.py  config.py  data_provider.py  intensity.py  reporting.py
src/market_making_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_backtest.py  test_intensity.py
