[project]
name = "market-making-engine"
version = "0.1.0"
description = "Avellaneda-Stoikov market making with intensity calibration and backtesting"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.scripts]
mm-engine = "market_making_engine.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
